Adicionando arara,avestruz,chinoanze e tucano

--- a/index.html
+++ b/index.html
@@ -82,17 +82,20 @@
     <!-- animais -->
     <div id="leao" class="select"><img src="images/leao.png" title="Leão"></div>
     <div id="elefante" class="select"><img src="images/elefante.png" title="Elefante"></div>
-    <div id="tigres" class="select"><img src="images/tigres.png"></div>
-    <div id="urso" class="select"><img src="images/urso.png"></div>
-    <div id="hipopotamo" class="select"><img src="images/hipopotamo.png"></div>
-    <div id="macaco_aranha" class="select"><img src="images/macaco.png"></div>
-    <div id="quelonios" class="select"><img src="images/quelonios.png"></div>
-    <div id="serpentes" class="select"><img src="images/serpentes.png"></div>
-    <div id="mutuns" class="select"><img src="images/mutuns.png"></div>
-    <div id="jacare" class="select"><img src="images/jacare.png"></div>
-    <div id="babuino" class="select"><img src="images/babuino.png"></div>
-    <div id="cervideos" class="select"><img src="images/cervideos.png"></div>
-    <div id="pelicano" class="select"><img src="images/pelicano.png"></div>
+    <div id="tigres" class="select"><img src="images/tigres.png" title="Tigres"></div>
+    <div id="urso" class="select"><img src="images/urso.png" title="Urso"></div>
+    <div id="hipopotamo" class="select"><img src="images/hipopotamo.png" title="Hipopotamo"></div>
+    <div id="macaco_aranha" class="select"><img src="images/macaco.png" title="Macaco"></div>
+    <div id="quelonios" class="select"><img src="images/quelonios.png" title="Quelônios"></div>
+    <div id="serpentes" class="select"><img src="images/serpentes.png" title="Serpentes"></div>
+    <div id="mutuns" class="select"><img src="images/mutuns.png" title="Mutuns"></div>
+    <div id="jacare" class="select"><img src="images/jacare.png"title="Jacaré"></div>
+    <div id="babuino" class="select"><img src="images/babuino.png" title="Babuíno"></div>
+    <div id="cervideos" class="select"><img src="images/cervideos.png" title="Cervídeos"></div>
+    <div id="pelicano" class="select"><img src="images/pelicano.png" title="Pelicano"></div>
+    <div id="chimpanze" class="select"><img src="images/chimpanze.png" title="Chimpanzé"></div>
+    <div id="avestruz" class="select"><img src="images/avestruz.png" title="Avestruz"></div>
+    <div id="tucano" clas="select"><img src="images/tucano.png" title="Tucano"></div>
 
   </nav>
     <div class="acude">Açude de Dentro</div>
