--- a/index.html
+++ b/index.html
@@ -12,95 +12,9 @@
 </head>
 <title>Mapa</title>
 <body> 
-  <article>
-  <div id="dialog" title="Lanche">
-     <img src="images/bar.jpg"><br><br>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.<br><br>
-</div>
-<div id="restaurante_dialog" title="Restaurante">
-     <br>
-     <img src="images/restaurante.jpg"> <br> <br> 
-     O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.<br><br>
-</div>
-<div id="browser_dialog" title="Atenção">
-    Querido usuário, atualize seu browser! <br><br>
-    Sugestão de navegadores<br><br>
-    <img src="images/chomme.jpg"><img src="images/firefox.jpg"><img src="images/opera.jpg"><img src="images/safari.jpg">
-</div>
-<div id="macaco_aranha_dialog" title="Macaco Aranha">
-     <br>
-     <img src="images/animais/macaco_aranha.jpg"> <br> <br> 
-     <b>Nome científico:</b>Ateles paniscus<br>
-     <b>Gestação:</b>Período de gestação de 210 a 232 dias.<br>
-     <b>Distribuição geográfica:</b>Brasil (Amapá, Pará, Roraima), Guianas e Suriname.<br>
-     <b>Hábitos alimentares:</b>Onívora, alimentando-se em geral de frutas, sementes, vegetais, folhas, insetos, flores, néctar.<br>
-     <b>Curiosidades:</b>Animal de hábitos diurnos, que costuma viver em bandos.
-     <br><br>
-</div>
-<div id="leao_dialog" title="Leão">
-     <br>
-     <img src="images/animais/leao.jpg"> <br> <br> 
-     <b>Nome científico:</b>Panthera leo<br>
-     <b>Peso:</b>150-250kg<br>
-     <b>Período de vida:</b>30 anos<br>
-     <b>Gestação:</b>Cerca de 4 meses<br>
-     <b>Nº de filhotes:</b>De 3 a 4<br>
-     <b>Distribuição geográfica:</b>Ásia e África<br>
-     <b>Hábitos alimentares:</b>Come qualquer animal que possa apanhar e matar, mas dão preferência a animais de grande porte.<br>
-     <b>Curiosidades:</b><li>Somente os machos possuem a juba e sua função parece ser a de proteger a cabeça e o pescoço nas ferozes lutas.</li>
-     <li>A caça é realizada principalmente pela fêmea.</li>
-     <li>Como o leão nunca tem certeza de quando será sua próxima refeição, ele come o máximo que pode, chegando a devorar 40kg de carne de uma só vez.</li>
-           
-     <br><br>
-</div>
-<div id="hipopotamo_dialog" title="Hipopotamo">
-     <br>
-     <img src="images/animais/hipopotamo.jpg"> <br> <br> 
-     <b>Nome científico:</b>Panthera leo<br>
-     <b>Peso:</b>150-250kg<br>
-     <b>Período de vida:</b>30 anos<br>
-     <b>Gestação:</b>Cerca de 4 meses<br>
-     <b>Nº de filhotes:</b>De 3 a 4<br>
-     <b>Distribuição geográfica:</b>Ásia e África<br>
-     <b>Hábitos alimentares:</b>Come qualquer animal que possa apanhar e matar, mas dão preferência a animais de grande porte.<br>
-     <b>Curiosidades:</b><li>Somente os machos possuem a juba e sua função parece ser a de proteger a cabeça e o pescoço nas ferozes lutas.</li>
-     <li>A caça é realizada principalmente pela fêmea.</li>
-     <li>Como o leão nunca tem certeza de quando será sua próxima refeição, ele come o máximo que pode, chegando a devorar 40kg de carne de uma só vez.</li>
-           
-     <br><br>
-</div>
-</article>
-<div id="box"></div>
-<div id="profundidade">
-  <nav>
-    <div id="lanche1" class="select"><img src="images/lanche.png"></div>
-    <div id="phone1" class="select"><img src="images/phone.png"></div>
-    <div id="restaurante" class="select"><img src="images/restaurante.png"></div>
-    <div id="zoo" class="select"><img src="images/zoo.png" ></div>
-    <div id="casa" class="select"><img src="images/casa.png" ></div>
-    <div id="i" class="select"><img src="images/i.png" ></div>
-    <div id="camada1"><img src="images/mapa_web.png" width="1024"></div>
-    <!-- animais -->
-    <div id="leao" class="select"><img src="images/leao.png" title="Leão"></div>
-    <div id="elefante" class="select"><img src="images/elefante.png" title="Elefante"></div>
-    <div id="tigres" class="select"><img src="images/tigres.png" title="Tigres"></div>
-    <div id="urso" class="select"><img src="images/urso.png" title="Urso"></div>
-    <div id="hipopotamo" class="select"><img src="images/hipopotamo.png" title="Hipopotamo"></div>
-    <div id="macaco_aranha" class="select"><img src="images/macaco.png" title="Macaco"></div>
-    <div id="quelonios" class="select"><img src="images/quelonios.png" title="Quelônios"></div>
-    <div id="serpentes" class="select"><img src="images/serpentes.png" title="Serpentes"></div>
-    <div id="mutuns" class="select"><img src="images/mutuns.png" title="Mutuns"></div>
-    <div id="jacare" class="select"><img src="images/jacare.png"title="Jacaré"></div>
-    <div id="babuino" class="select"><img src="images/babuino.png" title="Babuíno"></div>
-    <div id="cervideos" class="select"><img src="images/cervideos.png" title="Cervídeos"></div>
-    <div id="pelicano" class="select"><img src="images/pelicano.png" title="Pelicano"></div>
-    <div id="chimpanze" class="select"><img src="images/chimpanze.png" title="Chimpanzé"></div>
-    <div id="avestruz" class="select"><img src="images/avestruz.png" title="Avestruz"></div>
-    <div id="tucano" clas="select"><img src="images/tucano.png" title="Tucano"></div>
-
-  </nav>
-    <div class="acude">Açude de Dentro</div>
-    <div class="acude2">Açude de Dois Irmãos</div>
-</div>
+    <div id="load"></div>
+    <div id="carregando"><img src="images/ajax-loader.gif"></div>
+    <div id="container"></div>
 </body>
 </html>
 
