adicao da biblioteca bootstrap + botoes subir e descer

--- a/conteudo.html
+++ b/conteudo.html
@@ -1,3 +1,5 @@
+
+
  <article>
   <div id="dialog" title="Lanche">
      <img src="images/bar.jpg"><br><br>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.<br><br>
@@ -87,3 +89,7 @@
     <div class="acude">Açude de Dentro</div>
     <div class="acude2">Açude de Dois Irmãos</div>
 </div>
+
+<script type="text/javascript">
+ alert("ola");
+</script>
