adicao de todos os icones

--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
   <nav>
     <div id="lanche1" class="select"><img src="images/lanche.png"></div>
     <div id="phone1" class="select"><img src="images/phone.png"></div>
+    <div id="cidade" class="select" title="Cidade das Crianças"><img src="images/cidade.png"></div>
+    <div id="banheiro1" class="select" title="WC"><img src="images/wc.png"></div>
+    <div id="banheiro2" class="select" title="WC"><img src="images/wc.png"></div>
+    <div id="banheiro3" class="select" title="WC"><img src="images/wc.png"></div>
+    <div id="administracao" class="select" title="Administração"><img src="images/admin.png"></div>
+    <div id="posto" class="select" title="Posto Médico"><img src="images/posto.png"></div>
     <div id="restaurante" class="select"><img src="images/restaurante.png"></div>
     <div id="zoo" class="select"><img src="images/zoo.png" ></div>
     <div id="casa" class="select"><img src="images/casa.png" ></div>
